--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -45,7 +45,8 @@ MultipleInstanceLastHeight=720
 MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-C7CL5QU
 LastExecutedLaunchName=DESKTOP-C7CL5QU
-NewWindowPosition=(X=315,Y=143)
+NewWindowPosition=(X=379,Y=179)
+LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -82,22 +83,21 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
+LastLevel=/Game/TopDownBP/Maps/MainMenu
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/Projectile.Projectile
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownController.TopDownController
+OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/Player_Character.Player_Character
+OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/Player_Controller.Player_Controller
 
 [RootWindow]
-ScreenPosition=X=582.000 Y=440.000
-WindowSize=X=1310.000 Y=750.000
+ScreenPosition=X=11.000 Y=216.000
+WindowSize=X=1330.000 Y=770.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -114,7 +114,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/bmc0149/Desktop/Zombie_Tower_Defense/Zombie_TowerDefense/Content/TopDownBP/Maps
+UNR=D:/Users/Bryan/Desktop/ZTD/Zombie_Tower_Defense/Zombie_TowerDefense/Content/ZTD_Blueprint/Maps
 BRUSH=D:/Users/Bryan/Desktop/Zombie_Tower_Defense/Content/
 FBX=D:/Users/Bryan/Desktop/Zombie_Tower_Defense/Content/
 FBXAnim=D:/Users/Bryan/Desktop/Zombie_Tower_Defense/Content/
@@ -616,15 +616,22 @@ BlueprintProfiler.TimeStamp=2017.01.18-05.13.03
 BlueprintProfiler.LastCompileMethod=Unknown
 BlueprintGraph.TimeStamp=2017.01.18-05.13.03
 BlueprintGraph.LastCompileMethod=Unknown
-MaterialEditor.TimeStamp=2017.01.17-22.45.45
-MaterialEditor.LastCompileMethod=Unknown
+MaterialEditor.TimeStamp=2017.01.18-05.13.28
+MaterialEditor.LastCompileMethod=External
 ExternalImagePicker.TimeStamp=2017.01.17-22.41.04
 ExternalImagePicker.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2017.01.17-22.43.32
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+NewLevelDialog.TimeStamp=2017.01.18-05.13.33
+NewLevelDialog.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2017.01.18-05.13.42
+SequencerWidgets.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem0=/Game/ZTD_Blueprint/Maps/Menu_Main
+MRUItem1=/Game/TopDownBP/Maps/Menu_Main
+MRUItem2=/Game/TopDownBP/Maps/MainMenu
+MRUItem3=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1137,6 +1144,90 @@ REINST_TopDownCharacter_C_535.ComponentReplication=True
 REINST_TopDownCharacter_C_535.Activation=True
 REINST_TopDownCharacter_C_535.Cooking=True
 REINST_TopDownCharacter_C_535.Events=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=False
+TextBlock.Render Transform=True
+TextBlock.Navigation=True
+HorizontalBox.Layout=True
+HorizontalBox.Behavior=True
+HorizontalBox.Performance=True
+HorizontalBox.Render Transform=True
+HorizontalBox.Navigation=True
+CanvasPanel.Behavior=True
+CanvasPanel.Performance=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Navigation=True
+MainMenu_C.Appearance=True
+MainMenu_C.Interaction=True
+MainMenu_C.Input=True
+MainMenu_C.Behavior=True
+MainMenu_C.Performance=True
+MainMenu_C.Render Transform=True
+MainMenu_C.Navigation=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Behavior=True
+Button.Performance=True
+Button.Render Transform=True
+Button.Navigation=True
+Button.Events=True
+ObjectProperty.Variable=True
+ObjectProperty.Events=True
+ObjectProperty.DefaultValueCategory=True
+Menu_Main_C.Tick=True
+Menu_Main_C.Replication=True
+Menu_Main_C.Input=True
+Menu_Main_C.Actor=True
+Widget.Behavior=True
+Widget.Performance=True
+Widget.Render Transform=True
+Widget.Navigation=True
+Widget.Layout=True
+MapSelect_C.Appearance=True
+MapSelect_C.Interaction=True
+MapSelect_C.Input=True
+MapSelect_C.Behavior=True
+MapSelect_C.Performance=True
+MapSelect_C.Render Transform=True
+MapSelect_C.Navigation=True
+MapSelect_C.Designer=True
+MapSelect_C.Layout=True
+MainMenu_C.Designer=True
+MainMenu_C.Layout=True
+ZTD_GameMode_C.Classes=True
+ZTD_GameMode_C.Tick=True
+ZTD_GameMode_C.Game=True
+ZTD_GameMode_C.GameMode=True
+Player_Character_C.Character=True
+Player_Character_C.Tick=True
+Player_Character_C.Camera=True
+Player_Character_C.Pawn=True
+Player_Character_C.Rendering=True
+Player_Character_C.Replication=True
+Player_Character_C.Input=True
+Player_Character_C.Actor=True
+MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSample.MaterialExpression=True
+MaterialExpressionMultiply.MaterialExpressionMultiply=True
+MaterialExpressionMultiply.MaterialExpression=True
+Player_Controller_C.Default=True
+Player_Controller_C.Tick=True
+Player_Controller_C.PlayerController=True
+Player_Controller_C.Cheat Manager=True
+Player_Controller_C.MouseInterface=True
+Player_Controller_C.Game=True
+Player_Controller_C.Controller=True
+Player_Controller_C.Replication=True
+Player_Controller_C.Input=True
+Player_Controller_C.Actor=True
+FloatProperty.Variable=True
+FloatProperty.DefaultValueCategory=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Maps/TopDownExampleMap_BuiltData.TopDownExampleMap_BuiltData=1
@@ -1144,6 +1235,13 @@ REINST_TopDownCharacter_C_535.Events=True
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
 /Game/TopDownBP/Blueprints/M_Cursor_Decal.M_Cursor_Decal=1
 /Game/TopDownBP/Blueprints/TopDownController.TopDownController=0
+/Game/TopDownBP/Blueprints/Projectile.Projectile=1
+/Game/ZTD_Blueprint/Blueprints/Menu/MapSelect.MapSelect=0
+/Game/ZTD_Blueprint/Maps/Menu_Main.Menu_Main:PersistentLevel.Menu_Main=0
+/Game/ZTD_Blueprint/Blueprints/Menu/MainMenu.MainMenu=0
+/Game/ZTD_Blueprint/Blueprints/Projectile.Projectile=0
+/Game/ZTD_Blueprint/Blueprints/TopDownCharacter.TopDownCharacter=1
+/Game/ZTD_Blueprint/Blueprints/ZTD_GameMode.ZTD_GameMode=1
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -1160,14 +1258,18 @@ PreserveScaleRatio=True
 StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+SceneComponent=
+ActorComponent=
 Object=
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume=
 Brush=
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[5]\" "
+TextBlock=
+TextLayoutWidget=
+Widget=
+Visual=
 
 [DetailCustomWidgetExpansion]
 GeneralProjectSettings=InputSettings.Bindings.ActionMappings.ShootProjectile,
@@ -1218,5 +1320,28 @@ SlateRemoteSettings=InputSettings.Bindings.ActionMappings.ShootProjectile,
 TcpMessagingSettings=InputSettings.Bindings.ActionMappings.ShootProjectile,
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings.ShootProjectile,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.ShootProjectile,
+
+[WidgetTemplatesExpanded]
+Common=False
+Extra=False
+Input=False
+Optimization=False
+Panel=False
+Primitive=False
+Uncategorized=False
+User Created=False
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+
+[DetailCategoriesAdvanced]
+TextBlock.Appearance=True
+HorizontalBox.Behavior=False
+TextBlock.Wrapping=True
+
+[MessageLog]
+LastLogListing=EditorErrors
 
 
