--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -63,4 +63,6 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
+[/Script/Engine.UserInterfaceSettings]
+DefaultCursor=None
 
