3-31-17 - Tower placement tile
-Added tower placement tile, currently once a tower is placed it cannot
be sold or removed (to be added later)

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -83,7 +83,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/ZTD_Blueprint/Maps
+ContentBrowserTab1.SelectedPaths=/Game/ZTD_Blueprint/Blueprints
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -97,7 +97,7 @@ CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=11.000 Y=216.000
-WindowSize=X=1350.000 Y=790.000
+WindowSize=X=1360.000 Y=800.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -631,10 +631,11 @@ StaticMeshEditor.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/ZTD_Blueprint/Maps/ZTD_Main
-MRUItem1=/Game/ZTD_Blueprint/Maps/Menu_Main
-MRUItem2=/Game/TopDownBP/Maps/Menu_Main
-MRUItem3=/Game/TopDownBP/Maps/MainMenu
-MRUItem4=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem1=/Game/ZTD_Blueprint/Maps/Protomap
+MRUItem2=/Game/ZTD_Blueprint/Maps/Menu_Main
+MRUItem3=/Game/TopDownBP/Maps/Menu_Main
+MRUItem4=/Game/TopDownBP/Maps/MainMenu
+MRUItem5=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1412,6 +1413,70 @@ Player_Character_C.NavMovement=True
 Player_Character_C.Velocity=True
 Player_Character_C.PlanarMovement=True
 Player_Character_C.MovementComponent=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
+DirectionalLight.TransformCommon=True
+DirectionalLight.Light=True
+DirectionalLight.LightShafts=True
+DirectionalLight.DistanceFieldShadows=True
+DirectionalLight.CascadedShadowMaps=True
+DirectionalLight.Lightmass=True
+DirectionalLight.Performance=True
+DirectionalLight.LightFunction=True
+DirectionalLight.Rendering=True
+DirectionalLight.Tags=True
+DirectionalLight.Cooking=True
+DirectionalLight.Actor=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Tags=True
+CapsuleComponent.Cooking=True
+ChildActorComponent.TransformCommon=True
+ChildActorComponent.ChildActorComponent=True
+ChildActorComponent.Rendering=True
+ChildActorComponent.Tags=True
+ChildActorComponent.Cooking=True
+Landscape.TransformCommon=True
+Landscape.LOD=True
+Landscape.Lighting=True
+Landscape.Landscape=True
+Landscape.Lightmass=True
+Landscape.Collision=True
+Landscape.HierarchicalLOD=True
+Landscape.Rendering=True
+Landscape.Input=True
+Landscape.Actor=True
+LandscapeGizmoActiveActor.TransformCommon=True
+LandscapeGizmoActiveActor.LandscapeGizmoActiveActor=True
+LandscapeGizmoActiveActor.Gizmo=True
+LandscapeGizmoActiveActor.Rendering=True
+LandscapeGizmoActiveActor.Input=True
+LandscapeGizmoActiveActor.Actor=True
+Tower_Tile_C.Tick=True
+Tower_Tile_C.Rendering=True
+Tower_Tile_C.Replication=True
+Tower_Tile_C.Input=True
+Tower_Tile_C.Actor=True
+Tower_Tile_C.TransformCommon=True
+Test_Tower_C.Tick=True
+Test_Tower_C.Rendering=True
+Test_Tower_C.Replication=True
+Test_Tower_C.Input=True
+Test_Tower_C.Actor=True
+ChildActorComponent.Variable=True
+ChildActorComponent.Sockets=True
+ChildActorComponent.ComponentReplication=True
+ChildActorComponent.Events=True
+BoolProperty.Variable=True
+BoolProperty.DefaultValueCategory=True
+Tower_Tile_C.Default=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Maps/TopDownExampleMap_BuiltData.TopDownExampleMap_BuiltData=1
@@ -1431,6 +1496,8 @@ Player_Character_C.MovementComponent=True
 /Game/StarterContent/Materials/M_Metal_Steel.M_Metal_Steel=0
 /Game/StarterContent/Props/MaterialSphere.MaterialSphere=0
 /Game/Geometry/Meshes/1M_Cube_Chamfer.1M_Cube_Chamfer=0
+/Game/ZTD_Blueprint/Blueprints/Tower_Tile.Tower_Tile=0
+/Game/ZTD_Blueprint/Blueprints/Test_Tower.Test_Tower=0
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -1441,15 +1508,15 @@ LightDir=P=-39.999985 Y=27.499968 R=0.000000
 PrimType=1
 
 [SelectionDetails]
-PreserveScaleRatio=True
+PreserveScaleRatio=False
 
 [DetailPropertyExpansion]
-StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
-MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
-SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
-ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
-Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
+StaticMeshComponent=
+MeshComponent=
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
+Object=
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume=
 Brush=
@@ -1479,6 +1546,8 @@ Image="\"Object.Appearance.Brush\" "
 StaticMeshActor=
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+CapsuleComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+ChildActorComponent="\"Object.ChildActorComponent.ChildActorTemplate.Object.Tick\" "
 
 [DetailCustomWidgetExpansion]
 GeneralProjectSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.MoveForward,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.SetDestination,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.ShootProjectile,
@@ -1533,6 +1602,7 @@ StaticMeshActor=StaticMeshActor.Collision.Collision,
 StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
 Player_Character_C=Player_Character_C.Collision.Collision,
 SphereComponent=SphereComponent.Collision.Collision,
+WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 
 [WidgetTemplatesExpanded]
 Common=False
@@ -1559,8 +1629,13 @@ StaticMeshComponent.Collision=True
 StaticMeshComponent.Physics=True
 SphereComponent.Collision=True
 SphereComponent.Physics=True
+Test_Tower_C.Actor=True
 
 [MessageLog]
 LastLogListing=PIE
+
+[PlacementMode]
+RecentlyPlaced=/Game/ZTD_Blueprint/Blueprints/Tower_Tile.Tower_Tile;
+RecentlyPlaced=/Game/ZTD_Blueprint/Blueprints/Player_Character.Player_Character;
 
 
