--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=Zombie_Tower_Defense
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/TopDownBP/Maps/TopDownExampleMap
-GameDefaultMap=/Game/TopDownBP/Maps/TopDownExampleMap
+EditorStartupMap=/Game/ZTD_Blueprint/Maps/Menu_Main.Menu_Main
+GameDefaultMap=/Game/ZTD_Blueprint/Maps/Menu_Main.Menu_Main
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
@@ -65,4 +65,3 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.UserInterfaceSettings]
 DefaultCursor=None
-
