--- a/Saved/Config/Windows/Editor.ini
+++ b/Saved/Config/Windows/Editor.ini
@@ -151,7 +151,7 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 				(\
 					"SizeCoefficient": 0.18672099709510803,\
 					"Type": "Stack",\
-					"HideTabWell": true,\
+					"HideTabWell": false,\
 					"ForegroundTab": "AssetEditorToolkit_Toolbar",\
 					"Tabs": [\
 						(\
@@ -205,7 +205,7 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 									"SizeCoefficient": 0.80000001192092896,\
 									"Type": "Stack",\
 									"HideTabWell": false,\
-									"ForegroundTab": "Document : 2",\
+									"ForegroundTab": "Document : 9",\
 									"Tabs": [\
 										(\
 											"TabId": "Document",\
@@ -225,7 +225,7 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 										),\
 										(\
 											"TabId": "FindResults",\
-											"TabState": "OpenedTab"\
+											"TabState": "ClosedTab"\
 										)\
 									]\
 								)\
