--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -39,16 +39,10 @@ Uncategorized=False
 User Created=False
 
 [EditorStartup]
-LastLevel=/Game/ZTD_Blueprint/Blueprints/Protomap
+LastLevel=/Game/ZTD_Blueprint/Maps/Menu_Main
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/Tower_Tile.Tower_Tile
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/ZTD_Instance.ZTD_Instance
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/HUD/Ingame_UI.Ingame_UI
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/ZTD_GameMode.ZTD_GameMode
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/Player_Controller.Player_Controller
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/HUD/Reticle.Reticle
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -554,6 +548,13 @@ PlayerStart.Actor=True
 K2Node_CallFunction.Graph=True
 Tower_Tile_C.Tick=True
 Tower_Tile_C.Replication=True
+ZTD_GameMode_C.Default=True
+ZTD_MainMenu_Mode_C.Default=True
+ZTD_MainMenu_Mode_C.Tick=True
+ZTD_MainMenu_Mode_C.Classes=True
+ZTD_MainMenu_Mode_C.Game=True
+ZTD_MainMenu_Mode_C.GameMode=True
+K2Node_VariableGet.Events=True
 
 [DetailCategoriesAdvanced]
 ArrayProperty.Variable=False
@@ -585,6 +586,9 @@ LinuxTargetSettings="\"Object.Rendering.TargetedRHIs\" "
 LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.TrackSettings.TrackSettings[0]\" \"Object.Tracks.TrackSettings.TrackSettings[0].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[1]\" \"Object.Tracks.TrackSettings.TrackSettings[1].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2]\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[1]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[2]\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks.ExcludeDefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[1]\" "
 WorldSettings="\"Object.Lightmass.LightmassSettings\" \"Object.Audio.DefaultReverbSettings\" \"Object.Audio.DefaultAmbientZoneSettings\" \"Object.LODSystem.HierarchicalLODSetup\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].ProxySetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.MaterialSettings\" "
 Info="\"Object.Lightmass.LightmassSettings\" \"Object.Audio.DefaultReverbSettings\" \"Object.Audio.DefaultAmbientZoneSettings\" \"Object.LODSystem.HierarchicalLODSetup\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].ProxySetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.MaterialSettings\" "
+Button="\"Object.Appearance.WidgetStyle\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/ZTD_Blueprint/Blueprints/Game_UI/Pause_menu.Pause_menu=1
@@ -596,6 +600,7 @@ Info="\"Object.Lightmass.LightmassSettings\" \"Object.Audio.DefaultReverbSetting
 /Game/ZTD_Blueprint/Blueprints/ZTD_Instance.ZTD_Instance=0
 /Game/ZTD_Blueprint/Blueprints/Player_Character.Player_Character=0
 /Game/ZTD_Blueprint/Blueprints/HUD/Ingame_UI.Ingame_UI=0
+/Game/ZTD_Blueprint/Blueprints/ZTD_MainMenu_Mode.ZTD_MainMenu_Mode=0
 
 [MessageLog]
 LastLogListing=EditorErrors
@@ -642,9 +647,10 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,SubsurfaceScattering=1,VisualizeSSS=0,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,SkinCache=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,CameraFrustums=0,AudioRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,WidgetComponents=1",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,SubsurfaceScattering=1,VisualizeSSS=0,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,SkinCache=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,CameraFrustums=0,AudioRadius=0,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,WidgetComponents=1",BufferVisualizationMode="",ExposureSettings=(LogOffset=0,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowFPS=False,bShowStats=False,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/ZTD_Blueprint/Blueprints/Protomap
-MRUItem1=/Game/ZTD_Blueprint/Maps/Protomap
-MRUItem2=/Game/ZTD_Blueprint/Maps/ZTD_Main
+MRUItem0=/Game/ZTD_Blueprint/Maps/Menu_Main
+MRUItem1=/Game/ZTD_Blueprint/Blueprints/Protomap
+MRUItem2=/Game/ZTD_Blueprint/Maps/Protomap
+MRUItem3=/Game/ZTD_Blueprint/Maps/ZTD_Main
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -671,9 +677,9 @@ AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=160.000
-WindowSize=X=1300.000 Y=740.000
-InitiallyMaximized=True
+ScreenPosition=X=-1819.000 Y=374.000
+WindowSize=X=1310.000 Y=750.000
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -693,7 +699,7 @@ LightDir=P=-39.999985 Y=27.499968 R=0.000000
 PrimType=1
 
 [Directories2]
-UNR=../../../../../../Users/bmc0149/Desktop/Zombie_Tower_Defense/Zombie_TowerDefense/Content/ZTD_Blueprint/Blueprints
+UNR=D:/Users/Bryan/Desktop/ZTD/Zombie_Tower_Defense/Zombie_TowerDefense/Content/ZTD_Blueprint/Maps
 BRUSH=../../../../../../Users/Jordan Obe/Documents/GitHub/Zombie_TowerDefense/Content/
 FBX=../../../../../../Users/Jordan Obe/Documents/GitHub/Zombie_TowerDefense/Content/
 FBXAnim=../../../../../../Users/Jordan Obe/Documents/GitHub/Zombie_TowerDefense/Content/
@@ -1193,12 +1199,12 @@ MaterialEditor.TimeStamp=2017.03.30-13.25.07
 MaterialEditor.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2017.01.17-22.41.04
 ExternalImagePicker.LastCompileMethod=Unknown
-BlueprintProfiler.TimeStamp=2017.01.17-22.38.03
-BlueprintProfiler.LastCompileMethod=Unknown
-BlueprintGraph.TimeStamp=2017.01.17-22.37.54
-BlueprintGraph.LastCompileMethod=Unknown
-SequencerWidgets.TimeStamp=2017.01.17-22.48.32
-SequencerWidgets.LastCompileMethod=Unknown
+BlueprintProfiler.TimeStamp=2017.01.18-05.13.03
+BlueprintProfiler.LastCompileMethod=External
+BlueprintGraph.TimeStamp=2017.01.18-05.13.03
+BlueprintGraph.LastCompileMethod=External
+SequencerWidgets.TimeStamp=2017.01.18-05.13.42
+SequencerWidgets.LastCompileMethod=External
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_11
@@ -1268,6 +1274,6 @@ SlateRemoteSettings=InputSettings.Bindings.ActionMappings.SetDestination,InputSe
 TcpMessagingSettings=InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.ShootProjectile,InputSettings.Bindings.ActionMappings.ZoomOutCamera,InputSettings.Bindings.ActionMappings.ZoomInCamera,InputSettings.Bindings.ActionMappings.PauseMenu,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings,
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.ShootProjectile,InputSettings.Bindings.ActionMappings.ZoomOutCamera,InputSettings.Bindings.ActionMappings.ZoomInCamera,InputSettings.Bindings.ActionMappings.PauseMenu,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.ShootProjectile,InputSettings.Bindings.ActionMappings.ZoomOutCamera,InputSettings.Bindings.ActionMappings.ZoomInCamera,InputSettings.Bindings.ActionMappings.PauseMenu,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings,
-WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,WorldSettings.Lightmass.Lightmaps,
+WorldSettings=WorldSettings.Lightmass.Lightmaps,WorldSettings.GameMode.SelectedGameModeDetails,
 
 
