--- a/Saved/Config/Windows/Editor.ini
+++ b/Saved/Config/Windows/Editor.ini
@@ -151,7 +151,7 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 				(\
 					"SizeCoefficient": 0.18672099709510803,\
 					"Type": "Stack",\
-					"HideTabWell": true,\
+					"HideTabWell": false,\
 					"ForegroundTab": "AssetEditorToolkit_Toolbar",\
 					"Tabs": [\
 						(\
@@ -202,10 +202,10 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 							"Orientation": "Orient_Vertical",\
 							"Nodes": [\
 								(\
-									"SizeCoefficient": 0.80000001192092896,\
+									"SizeCoefficient": 0.89265573024749756,\
 									"Type": "Stack",\
 									"HideTabWell": false,\
-									"ForegroundTab": "Document : 13",\
+									"ForegroundTab": "Document : 23",\
 									"Tabs": [\
 										(\
 											"TabId": "Document",\
@@ -214,10 +214,10 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 									]\
 								),\
 								(\
-									"SizeCoefficient": 0.20000000298023224,\
+									"SizeCoefficient": 0.10734108090400696,\
 									"Type": "Stack",\
 									"HideTabWell": false,\
-									"ForegroundTab": "CompilerResults",\
+									"ForegroundTab": "FindResults",\
 									"Tabs": [\
 										(\
 											"TabId": "CompilerResults",\
