The beginning of the HUD
I implemented the weapon/tower selection tab fr the HUD. It is not fully
functional as of yet, but for now you can switch tabs in-game, and the
mode (shooting mode and tower placement mode) will change depending on
whcih tab you are in

--- a/Saved/Config/Windows/Editor.ini
+++ b/Saved/Config/Windows/Editor.ini
@@ -42,7 +42,7 @@ WidgetBlueprintEditor_Designer_Layout_v4_1=(\
 					"Orientation": "Orient_Horizontal",\
 					"Nodes": [\
 						(\
-							"SizeCoefficient": 0.15000000596046448,\
+							"SizeCoefficient": 0.15900503098964691,\
 							"Type": "Splitter",\
 							"Orientation": "Orient_Vertical",\
 							"Nodes": [\
@@ -73,7 +73,7 @@ WidgetBlueprintEditor_Designer_Layout_v4_1=(\
 							]\
 						),\
 						(\
-							"SizeCoefficient": 0.62962961196899414,\
+							"SizeCoefficient": 0.6206246018409729,\
 							"Type": "Stack",\
 							"HideTabWell": true,\
 							"ForegroundTab": "SlatePreview",\
@@ -151,7 +151,7 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 				(\
 					"SizeCoefficient": 0.18672099709510803,\
 					"Type": "Stack",\
-					"HideTabWell": false,\
+					"HideTabWell": true,\
 					"ForegroundTab": "AssetEditorToolkit_Toolbar",\
 					"Tabs": [\
 						(\
@@ -202,10 +202,10 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 							"Orientation": "Orient_Vertical",\
 							"Nodes": [\
 								(\
-									"SizeCoefficient": 0.89265573024749756,\
+									"SizeCoefficient": 0.80000001192092896,\
 									"Type": "Stack",\
 									"HideTabWell": false,\
-									"ForegroundTab": "Document : 23",\
+									"ForegroundTab": "Document : 56",\
 									"Tabs": [\
 										(\
 											"TabId": "Document",\
@@ -214,18 +214,18 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 									]\
 								),\
 								(\
-									"SizeCoefficient": 0.10734108090400696,\
+									"SizeCoefficient": 0.20000000298023224,\
 									"Type": "Stack",\
 									"HideTabWell": false,\
-									"ForegroundTab": "FindResults",\
+									"ForegroundTab": "None",\
 									"Tabs": [\
 										(\
 											"TabId": "CompilerResults",\
-											"TabState": "OpenedTab"\
+											"TabState": "ClosedTab"\
 										),\
 										(\
 											"TabId": "FindResults",\
-											"TabState": "OpenedTab"\
+											"TabState": "ClosedTab"\
 										)\
 									]\
 								)\
