--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1,5 +1,4 @@
 [/Script/UnrealEd.LevelEditorPlaySettings]
-LastExecutedPlayModeType=PlayMode_InNewProcess
 GameGetsMouseControl=False
 MouseControlLabelPosition=LabelAnchorMode_TopLeft
 ViewportGetsHMDControl=False
@@ -9,7 +8,7 @@ PIEAlwaysOnTop=False
 StandaloneWindowPosition=(X=0,Y=0)
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
-BuildGameBeforeLaunch=PlayOnBuild_Default
+BuildGameBeforeLaunch=PlayOnBuild_Never
 LaunchConfiguration=LaunchConfig_Default
 bAutoCompileBlueprintsOnLaunch=True
 PlayNetMode=PIE_Standalone
@@ -27,13 +26,13 @@ MultipleInstanceLastHeight=720
 MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@NIARAII
 LastExecutedLaunchName=NIARAII
+NewWindowPosition=(X=155,Y=115)
 
 [WidgetTemplatesExpanded]
-Common=False
 Extra=False
 Input=False
 Optimization=False
-Panel=False
+Panel=True
 Primitive=False
 Uncategorized=False
 User Created=False
@@ -43,9 +42,7 @@ LastLevel=/Game/ZTD_Blueprint/Maps/Menu_Main
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/Player_Controller.Player_Controller
 OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/HUD/Ingame_UI.Ingame_UI
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/Projectile.Projectile
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -509,7 +506,7 @@ Reticle_C.Performance=True
 Reticle_C.Render Transform=True
 Reticle_C.Navigation=True
 Image.Layout=True
-Image.Appearance=False
+Image.Appearance=True
 Image.Behavior=True
 Image.Performance=True
 Image.Render Transform=True
@@ -754,15 +751,46 @@ ProjectileMovementComponent.ComponentReplication=True
 ProjectileMovementComponent.Activation=True
 ProjectileMovementComponent.Cooking=True
 ProjectileMovementComponent.Events=True
+WidgetSwitcher.Layout=True
+WidgetSwitcher.Switcher=True
+WidgetSwitcher.Behavior=True
+WidgetSwitcher.Performance=True
+WidgetSwitcher.Render Transform=True
+WidgetSwitcher.Navigation=True
+CanvasPanel.Layout=True
+UniformGridPanel.Layout=True
+UniformGridPanel.Child Layout=True
+UniformGridPanel.Behavior=True
+UniformGridPanel.Performance=True
+UniformGridPanel.Render Transform=True
+UniformGridPanel.Navigation=True
+Widget.Layout=True
+Widget.Behavior=True
+Widget.Performance=True
+Widget.Render Transform=True
+Widget.Navigation=True
+ProgressBar.Layout=True
+ProgressBar.Style=True
+ProgressBar.Progress=True
+ProgressBar.Appearance=True
+ProgressBar.Behavior=True
+ProgressBar.Performance=True
+ProgressBar.Render Transform=True
+ProgressBar.Navigation=True
+K2Node_VariableSet.Events=True
+MulticastDelegateProperty.Delegate=True
+MulticastDelegateProperty.DelegateInputs=True
 
 [DetailCategoriesAdvanced]
 ArrayProperty.Variable=False
 ComboBoxString.Content=True
-TextBlock.Appearance=False
+TextBlock.Appearance=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableSet.Variable=False
 
 [DetailPropertyExpansion]
 OptionsMenu_C=
-UserWidget=
+UserWidget="\"Object.Appearance.ColorAndOpacity\" "
 Widget=
 Visual=
 Object=
@@ -786,8 +814,8 @@ LinuxTargetSettings="\"Object.Rendering.TargetedRHIs\" "
 LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.TrackSettings.TrackSettings[0]\" \"Object.Tracks.TrackSettings.TrackSettings[0].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[1]\" \"Object.Tracks.TrackSettings.TrackSettings[1].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2]\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[1]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[2]\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks.ExcludeDefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[1]\" "
 WorldSettings="\"Object.Lightmass.LightmassSettings\" \"Object.Audio.DefaultReverbSettings\" \"Object.Audio.DefaultAmbientZoneSettings\" \"Object.LODSystem.HierarchicalLODSetup\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].ProxySetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.MaterialSettings\" "
 Info="\"Object.Lightmass.LightmassSettings\" \"Object.Audio.DefaultReverbSettings\" \"Object.Audio.DefaultAmbientZoneSettings\" \"Object.LODSystem.HierarchicalLODSetup\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].ProxySetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.MaterialSettings\" "
-Button="\"Object.Appearance.WidgetStyle\" "
-ContentWidget="\"Object.Appearance.WidgetStyle\" "
+Button=
+ContentWidget=
 PanelWidget=
 EditorStyleSettings="\"Object.Colors.SelectionColor\" \"Object.Colors.PressedSelectionColor\" \"Object.Colors.InactiveSelectionColor\" \"Object.Colors.KeyboardFocusColor\" \"Object.Graphs.RegularColor\" \"Object.Graphs.RuleColor\" \"Object.Graphs.CenterColor\" \"Object.Output Log.LogBackgroundColor\" \"Object.Output Log.LogSelectionBackgroundColor\" \"Object.Output Log.LogNormalColor\" \"Object.Output Log.LogCommandColor\" \"Object.Output Log.LogWarningColor\" \"Object.Output Log.LogErrorColor\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoReimport.AutoReimportDirectorySettings\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0]\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0].Wildcards\" \"Object.Blueprints\" \"Object.AutoSave\" "
@@ -802,6 +830,11 @@ TileSetEditorSettings="\"Object.Background.DefaultBackgroundColor\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 AutomationTestSettings="\"Object.Automation.EditorPerformanceTestMaps\" \"Object.Automation.EditorPerformanceTestMaps.EditorPerformanceTestMaps[0]\" \"Object.Automation.BuildPromotionTest\" \"Object.Automation.BuildPromotionTest.ImportWorkflow\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Diffuse\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Normal\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.StaticMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.ReimportStaticMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.BlendShapeMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.MorphMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.SkeletalMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Animation\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Sound\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.SurroundSound\" \"Object.Automation.BuildPromotionTest.OpenAssets\" \"Object.Automation.BuildPromotionTest.NewProjectSettings\" \"Object.Automation.MaterialEditorPromotionTest\" \"Object.Automation.ParticleEditorPromotionTest\" \"Object.Automation.BlueprintEditorPromotionTest\" "
 LogVisualizerSettings="\"Object.VisualLogger.GraphsBackgroundColor\" "
+Border="\"Object.Content.Padding\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
+TextBlock="\"Object.Appearance.ColorAndOpacity\" "
+TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" "
+Image="\"Object.Appearance.Brush\" "
+Ingame_UI_C="\"Object.Appearance.ColorAndOpacity\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/ZTD_Blueprint/Blueprints/Game_UI/Pause_menu.Pause_menu=1
@@ -894,8 +927,8 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [RootWindow]
-ScreenPosition=X=2025.000 Y=264.000
-WindowSize=X=1330.000 Y=770.000
+ScreenPosition=X=-7.000 Y=-6.000
+WindowSize=X=1350.000 Y=790.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1416,14 +1449,16 @@ MaterialEditor.TimeStamp=2017.03.30-13.25.07
 MaterialEditor.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2017.01.18-05.13.18
 ExternalImagePicker.LastCompileMethod=External
-BlueprintProfiler.TimeStamp=2017.01.18-05.13.03
+BlueprintProfiler.TimeStamp=2017.03.14-04.20.56
 BlueprintProfiler.LastCompileMethod=External
-BlueprintGraph.TimeStamp=2017.01.18-05.13.03
+BlueprintGraph.TimeStamp=2017.03.14-04.20.55
 BlueprintGraph.LastCompileMethod=External
-SequencerWidgets.TimeStamp=2017.01.18-05.13.42
+SequencerWidgets.TimeStamp=2017.03.14-04.21.55
 SequencerWidgets.LastCompileMethod=External
 HierarchicalLODUtilities.TimeStamp=2017.01.17-22.43.32
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+MovieSceneCapture.TimeStamp=2017.03.14-04.21.39
+MovieSceneCapture.LastCompileMethod=Unknown
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_11
