--- a/Saved/Config/Windows/Editor.ini
+++ b/Saved/Config/Windows/Editor.ini
@@ -42,7 +42,7 @@ WidgetBlueprintEditor_Designer_Layout_v4_1=(\
 					"Orientation": "Orient_Horizontal",\
 					"Nodes": [\
 						(\
-							"SizeCoefficient": 0.15000000596046448,\
+							"SizeCoefficient": 0.32123494148254395,\
 							"Type": "Splitter",\
 							"Orientation": "Orient_Vertical",\
 							"Nodes": [\
@@ -73,7 +73,7 @@ WidgetBlueprintEditor_Designer_Layout_v4_1=(\
 							]\
 						),\
 						(\
-							"SizeCoefficient": 0.62962961196899414,\
+							"SizeCoefficient": 0.45839422941207886,\
 							"Type": "Stack",\
 							"HideTabWell": true,\
 							"ForegroundTab": "SlatePreview",\
@@ -151,7 +151,7 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 				(\
 					"SizeCoefficient": 0.18672099709510803,\
 					"Type": "Stack",\
-					"HideTabWell": true,\
+					"HideTabWell": false,\
 					"ForegroundTab": "AssetEditorToolkit_Toolbar",\
 					"Tabs": [\
 						(\
@@ -202,10 +202,10 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 							"Orientation": "Orient_Vertical",\
 							"Nodes": [\
 								(\
-									"SizeCoefficient": 0.80000001192092896,\
+									"SizeCoefficient": 0.89265573024749756,\
 									"Type": "Stack",\
 									"HideTabWell": false,\
-									"ForegroundTab": "Document : 19",\
+									"ForegroundTab": "Document : 12",\
 									"Tabs": [\
 										(\
 											"TabId": "Document",\
@@ -214,14 +214,14 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 									]\
 								),\
 								(\
-									"SizeCoefficient": 0.20000000298023224,\
+									"SizeCoefficient": 0.10734108090400696,\
 									"Type": "Stack",\
 									"HideTabWell": false,\
 									"ForegroundTab": "FindResults",\
 									"Tabs": [\
 										(\
 											"TabId": "CompilerResults",\
-											"TabState": "ClosedTab"\
+											"TabState": "OpenedTab"\
 										),\
 										(\
 											"TabId": "FindResults",\
