Minor UI Change
Added background behind wave counter

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -29,7 +29,7 @@ LastExecutedLaunchName=NIARAII
 NewWindowPosition=(X=315,Y=143)
 NewWindowPosition=(X=435,Y=155)
 LastExecutedPlayModeType=PlayMode_InNewProcess
-LastExecutedPlayModeType=PlayMode_InEditorFloating
+LastExecutedPlayModeType=PlayMode_InNewProcess
 None=======
 
 [WidgetTemplatesExpanded]
@@ -45,24 +45,13 @@ Uncategorized=False
 User Created=True
 User Created=False
 None=======
-Common=False
 
 [EditorStartup]
-LastLevel=/Game/ZTD_Blueprint/Maps/MapB
+LastLevel=/Game/ZTD_Blueprint/Maps/Menu_Main
 
 [AssetEditorManager]
 CleanShutdown=True
 None=======
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/Player_Character.Player_Character
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Materials/TowerTransparent.TowerTransparent
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/ZTD_GameMode.ZTD_GameMode
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/HUD/Ingame_UI.Ingame_UI
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/Menu/MapSelect.MapSelect
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Normal_Zombie_AI/Zombie_Character.Zombie_Character
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/ZTD_Instance.ZTD_Instance
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/Projectile.Projectile
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Materials/Bullet.Bullet
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/Player_Controller.Player_Controller
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1013,9 +1002,9 @@ StaticMesh.ImportSettings=False
 [DetailPropertyExpansion]
 OptionsMenu_C="\"Object.Appearance.ColorAndOpacity\" "
 UserWidget=
-Widget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Object=
+Widget="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ComboBoxString="\"Object.Content.DefaultOptions\" \"Object.Style.ItemStyle\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1040,7 +1029,7 @@ Info="\"Object.Lightmass.LightmassSettings\" \"Object.Audio.DefaultReverbSetting
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.ColorAndOpacity\" "
 Button="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget=
-ContentWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object.Content.Padding\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget=
 PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 None=======
@@ -1201,9 +1190,9 @@ AssetPropertyPicker.CurrentViewType=0
 
 [RootWindow]
 ScreenPosition=X=-1272.000 Y=148.000
-ScreenPosition=X=280.000 Y=120.000
+ScreenPosition=X=-1272.000 Y=148.000
 WindowSize=X=1420.000 Y=860.000
-WindowSize=X=1490.000 Y=930.000
+WindowSize=X=1500.000 Y=860.000
 None=======
 InitiallyMaximized=True
 
@@ -1231,7 +1220,7 @@ None=======
 BRUSH=../../../../../../Users/Jordan Obe/Documents/GitHub/Zombie_TowerDefense/Content/
 FBX=../../../../../../Users/Jordan Obe/Documents/GitHub/Zombie_TowerDefense/Content/
 FBXAnim=../../../../../../Users/Jordan Obe/Documents/GitHub/Zombie_TowerDefense/Content/
-GenericImport=C:/Users/Jonathan/Desktop/surebox.png
+GenericImport=C:/Users/Jonathan/Desktop/wavemenu.png
 GenericExport=../../../../../../Users/Jordan Obe/Documents/GitHub/Zombie_TowerDefense/Content/
 GenericOpen=../../../../../../Users/Jordan Obe/Documents/GitHub/Zombie_TowerDefense/Content/
 GenericSave=../../../../../../Users/Jordan Obe/Documents/GitHub/Zombie_TowerDefense/Content/
