Finally got the AI
ai stuff functions working. just gotta get pathing done next to make it
smooth and create the behavior tree for towers

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -986,6 +986,7 @@ MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
 MaterialExpressionConstant3Vector.MaterialExpression=True
 MaterialExpressionMultiply.MaterialExpressionMultiply=True
 MaterialExpressionMultiply.MaterialExpression=True
+BlackboardData.Parent=True
 
 [DetailCategoriesAdvanced]
 ArrayProperty.Variable=False
@@ -1004,7 +1005,7 @@ OptionsMenu_C="\"Object.Appearance.ColorAndOpacity\" "
 UserWidget=
 Widget="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Visual="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Object="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Object=
 ComboBoxString="\"Object.Content.DefaultOptions\" \"Object.Style.ItemStyle\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1073,6 +1074,8 @@ ZombieHealthbar_C=
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" "
 SceneComponent=
 ActorComponent=
+BlackboardData="\"Object.Blackboard\" "
+DataAsset="\"Object.Blackboard\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/ZTD_Blueprint/Blueprints/Game_UI/Pause_menu.Pause_menu=0
@@ -1103,6 +1106,7 @@ None=======
 /Game/ZTD_Blueprint/Normal_Zombie_AI/AI_Controller.AI_Controller=0
 /Game/ZTD_Blueprint/Blueprints/HUD/ZombieHealthbar.ZombieHealthbar=0
 /Game/ZTD_Blueprint/Normal_Zombie_AI/Zombie_Character.Zombie_Character=0
+/Game/ZTD_Blueprint/Normal_Zombie_AI/AI_Blackboard.AI_Blackboard=1
 
 [MessageLog]
 LastLogListing=PIE
@@ -1166,7 +1170,7 @@ bShowMobileStats=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/ZTD_Blueprint/Blueprints/Menu
-ContentBrowserTab1.SelectedPaths=/Game/ZTD_Blueprint/Blueprints/Game_UI
+ContentBrowserTab1.SelectedPaths=/Game/ZTD_Blueprint/Normal_Zombie_AI
 None=======
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
@@ -1190,9 +1194,9 @@ AssetPropertyPicker.CurrentViewType=0
 
 [RootWindow]
 ScreenPosition=X=-1272.000 Y=148.000
-ScreenPosition=X=-1272.000 Y=148.000
+ScreenPosition=X=205.000 Y=85.000
 WindowSize=X=1420.000 Y=860.000
-WindowSize=X=1500.000 Y=860.000
+WindowSize=X=1510.000 Y=870.000
 None=======
 InitiallyMaximized=True
 
