--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -1,11 +1,5 @@
 
 [/Script/Engine.InputSettings]
--AxisConfig=(AxisKeyName="Gamepad_LeftX",AxisProperties=(DeadZone=0.25,Exponent=1.f,Sensitivity=1.f))
--AxisConfig=(AxisKeyName="Gamepad_LeftY",AxisProperties=(DeadZone=0.25,Exponent=1.f,Sensitivity=1.f))
--AxisConfig=(AxisKeyName="Gamepad_RightX",AxisProperties=(DeadZone=0.25,Exponent=1.f,Sensitivity=1.f))
--AxisConfig=(AxisKeyName="Gamepad_RightY",AxisProperties=(DeadZone=0.25,Exponent=1.f,Sensitivity=1.f))
--AxisConfig=(AxisKeyName="MouseX",AxisProperties=(DeadZone=0.f,Exponent=1.f,Sensitivity=0.07f))
--AxisConfig=(AxisKeyName="MouseY",AxisProperties=(DeadZone=0.f,Exponent=1.f,Sensitivity=0.07f))
 -AxisConfig=(AxisKeyName="Gamepad_RightY",AxisProperties=(DeadZone=0.250000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
 -AxisConfig=(AxisKeyName="MouseX",AxisProperties=(DeadZone=0.000000,Sensitivity=0.070000,Exponent=1.000000,bInvert=False))
 -AxisConfig=(AxisKeyName="MouseY",AxisProperties=(DeadZone=0.000000,Sensitivity=0.070000,Exponent=1.000000,bInvert=False))
@@ -75,7 +69,8 @@ DefaultViewportMouseLockMode=LockOnCapture
 -ActionMappings=(ActionName="Weapon/Tower3",Key=Three,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="Reload",Key=R,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="Weapon/Tower 4",Key=Four,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
--ActionMappings=(ActionName="TestDamagePlayer",Key=None,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="TestDamagePlayer",Key=H,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="TestBaseDamage",Key=None,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="SetDestination",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="SetDestination",Key=MotionController_Right_Trigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="SetDestination",Key=Gamepad_RightTrigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
@@ -93,6 +88,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="Reload",Key=R,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Weapon/Tower 4",Key=Four,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="TestDamagePlayer",Key=H,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="TestBaseDamage",Key=J,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
 -AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
 -AxisMappings=(AxisName="MoveRight",Key=D,Scale=1.000000)
